syntax = "proto3";

package proto.network.v1;

option go_package = "proto/network/v1";

service NetworkService {
  rpc Setup(SetupNetworkRequest) returns (SetupNetworkResponse){}
  rpc Cleanup(CleanupNetworkRequest) returns (CleanupNetworkResponse){}
  rpc SetupCrossNodeRoute(SetupCrossNodeRouteRequest) returns (SetupCrossNodeRouteResponse){}
}

message SetupNetworkRequest{
  string bridgeIP = 1;
  int32 numVMs = 2;
}

message SetupNetworkResponse{
}

message CleanupNetworkRequest{
  int32 numVMs = 1;
}

message CleanupNetworkResponse{
}

message SetupCrossNodeRouteRequest{
  string remoteSubnet = 1;
  string remoteNodeIP = 2;
  string localBridgeIP = 3;
}

message SetupCrossNodeRouteResponse{
}